2012-04-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* smtp.el (smtp-open-connection): Raise error when open connection
	function failed.

2012-03-20  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Support built-in GnuTLS for STARTTLS connection.
	* smtp.el (smtp-use-gnutls): New cutomizable variable.
	(smtp-open-gnutls-starttls-stream): New function.
	(smtp-submit-package): Respect smtp-use-gnutls's value.
	(smtp-send-buffer, smtp-send-buffer-by-myself): Do not
	decide smtp-open-connection-function's value here.
	(smtp-open-connection): Decide which open-connection-function is
	called here.  Respect smtp-use-gnutls's value.

2011-06-27  Kazuhiro Ito  <kazuhiro@chrono.local.domain>

	* mel-q.el (quoted-printable-num-to-raw-byte-char): Enclose with
	eval-and-compile().

2011-06-24  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-parse.el (mime-encode-parameters-broken-mime): New function.

	* eword-encode.el (eword-encode-Content-Type-field-body-broken-mime)
	(eword-encode-Content-Disposition-field-body-broken-mime): New
	functions.  If you want to use them, modify
	`mime-header-encode-method-alist'.

2011-06-19  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Revert the change of 2004-02-17.
	* smtp.el (smtp-starttls-program, smtp-starttls-extra-args):
	Abolished.
	(smtp-send-buffer): Likewise.

2011-06-09  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime.el (mime-entity-filename): When a result is got from entity
	header, decode it.

2011-06-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Merged from rfc2231-encoder branch.
	* eword-encode.el (eword-encode-Content-Type-field-body)
	(eword-encode-Content-Disposition-field-body): New functions.

	* mime-def.el (mime-attribute-char-regexp): Update for RFC2231.
	(mime-non-attribute-char-regexp): New constant.

	* mime-parse.el (mime-divide-extended-parameter)
	(mime-encode-extended-parameter, mime-divide-regular-parameter)
	(mime-encode-regular-parameter, mime-encode-parameters): New
	functions.

2011-05-16  David Maus  <dmaus@ictsoc.de>
